--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Just Share Blog
 description:      A blog about blogging, social media marketing, life, technology, gadgets, ideas, startups, music, and much more.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://localhost:4000
+url:              http://justshare.github.io
 
 # Owner/author information
 owner:
@@ -29,7 +29,7 @@ owner:
 authors:
   arvi:
     name:           Arvi Krishnaswamy
-    avatar:         bio-photo.jpg
+    avatar:         bio-arvi.jpg
     bio:            "Entrepreneur and Tech Executive"
     email:          arvi@alumni.iastate.edu
     # Social networking links are used in author-bio sidebar. Update and remove as you like.
