--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ title:            Just Share Blog
 description:      A blog about blogging, social media marketing, life, technology, gadgets, ideas, startups, music, and much more.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://justshare.github.io
+#url:              http://localhost:4000
 disqus_shortname: justshareapp
+mixpanel_code:    cf47f8688b7b7b06cdc64e0bf1a87446
 
 # Owner/author information
 owner:
