--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "_posts/veriloquent"]
 	path = _posts/veriloquent
-	url = git://github.com/justshare/veriloquent.git
+	url = https://github.com/justshare/veriloquent.git
