--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ authors:
 
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:
+google_analytics: UA-35664860-6
 google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
