--- a/_config.yml
+++ b/_config.yml
@@ -116,6 +116,7 @@ authors:
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-35664860-6
+google_analytics_domain: blog.justshareapp.com
 google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
