added lavanyas bio pic

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ authors:
     google_plus:    AravindKrishnaswamy-arg0s
   lavanya:
     name:           Lavanya Gopinath
-    avatar:         https://pbs.twimg.com/profile_images/418789915166380032/nn5afiTl.jpeg
+    avatar:         bio-lavanya.jpg
     bio:            "Reader, Writer, Nitpicker, Mom."
     email:          your@email.com
     # Social networking links are used in author-bio sidebar. Update and remove as you like.
